reformat stretching tutorial and disable GUI visualization by default for this file

--- a/tutorials/1-04-cartbox_multiple_stretch/parameter.ini
+++ b/tutorials/1-04-cartbox_multiple_stretch/parameter.ini
@@ -2,13 +2,16 @@
 ! OUTPUT
 !================================================================================================================================= !
 ProjectName  = cartbox_multiple_stretch   ! Name of output files
-Debugvisu    = T                          ! Write files for Visualization of the mesh and boundary conditions (tecplot ascii)
+Debugvisu    = F                          ! Launch the GMSH GUI to visualize the mesh
+OutputFormat = HDF5                       ! Mesh output format (HDF5 VTK)
+! nThreads     = 4                          ! Number of threads for multiprocessing
 
 !================================================================================================================================= !
 ! MESH
 !================================================================================================================================= !
 Mode         = 1                          ! Mode for Cartesian boxes
 nZones       = 3                          ! number of boxes
+
 ! ===   lower left zone  ===
 Corner       = (/-2.,-1.,0. ,,0.,-1.,0. ,,0.,0.,0. ,, -2.,0.,0.,,-2.,-1.,2. ,,0.,-1.,2. ,,0.,0.,2. ,, -2.,0.,2./)
                                           ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,u´z_8/)
@@ -17,12 +20,14 @@ BCIndex      = (/6,1,3,0,4,7/)            ! Indices of Boundary Conditions for  
 elemtype     = 108                        ! Elementform (104: Tetrahedra, 105: pyramid, 106:prism, 108: Hexahedral)
 factor       = (/-1.2,1.,1./)             ! element stretching, either with a constant growth factor (+/- changes direction)
 !l0          = (/0.,0.,0./)               ! or with a minimimum size
+
 ! ===   upper left zone  ===
 Corner       = (/-2.,0.,0. ,, 0.,0.,0. ,, 0.,1.,0. ,, -2.,1.,0.,, -2.,0.,2. ,, 0.,0.,2. ,, 0.,1.,2. ,, -2.,1.,2. /)
 nElems       = (/8,6,4/)
 BCIndex      = (/6,0,0,2,4,7/)
 elemtype     = 108
 factor       = (/-1.2,1.5,1./)            ! element stretching
+
 ! ===   upper right zone  ===
 Corner       = (/0.,0.,0. ,, 5.,0.,0. ,, 5.,1.,0. ,, 0.,1.,0.,, 0.,0.,2. ,, 5.,0.,2. ,, 5.,1.,2. ,, 0.,1.,2. /)
 nElems       = (/10,6,4/)
