--- a/tutorials/2-02-external_mesh_CGNS_mixed/parameter.ini
+++ b/tutorials/2-02-external_mesh_CGNS_mixed/parameter.ini
@@ -17,14 +17,19 @@ doSortIJK    = F
 ! BOUNDARY CONDITIONS
 !=============================================================================== !
 BoundaryName       = x+                             ! BC index 1 (from position in parameterfile)
-BoundaryType       = (/2,0,0,0/)                    ! (/ Type, curveIndex, State, alpha /)
+BoundaryType       = (/1,0,0,-1/)                   ! (/ Type, curveIndex, State, alpha /)
 BoundaryName       = x-                             ! BC index 2
-BoundaryType       = (/2,0,0,0/)
+BoundaryType       = (/1,0,0, 1/)
 BoundaryName       = y+                             ! BC index 3
-BoundaryType       = (/2,0,0,0/)
+BoundaryType       = (/1,0,0,-2/)
 BoundaryName       = y-                             ! BC index 4
-BoundaryType       = (/2,0,0,0/)
+BoundaryType       = (/1,0,0, 2/)
 BoundaryName       = z+                             ! BC index 5
-BoundaryType       = (/2,0,0,0/)
+BoundaryType       = (/2,0,0,-3/)
 BoundaryName       = z-                             ! BC index 6
-BoundaryType       = (/2,0,0,0/)
+BoundaryType       = (/2,0,0, 3/)
+vv = (/20.,  0.,  0./)
+vv = (/ 0., 20.,  0./)
+vv = (/ 0.,  0., 20./)
+
+doPeriodicCorrect  = T
