Implement SFC, IJK sorting for mixed grids

--- a/tutorials/1-09-cartbox_nonconforming/parameter.ini
+++ b/tutorials/1-09-cartbox_nonconforming/parameter.ini
@@ -9,7 +9,7 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 !================================================================================================================================= !
 ! MESH
 !================================================================================================================================= !
-Mode         = 1                          ! Mode for Cartesian boxes
+Mode         = Internal                   ! Mode for Cartesian boxes
 nZones       = 3                          ! Number of boxes
 
 ! ===         left zone  ===
