--- a/tutorials/2-02-external_mesh_CGNS_mixed/parameter.ini
+++ b/tutorials/2-02-external_mesh_CGNS_mixed/parameter.ini
@@ -28,8 +28,9 @@ BoundaryName       = z+                             ! BC index 5
 BoundaryType       = (/2,0,0,-3/)
 BoundaryName       = z-                             ! BC index 6
 BoundaryType       = (/2,0,0, 3/)
-vv = (/20.,  0.,  0./)
-vv = (/ 0., 20.,  0./)
-vv = (/ 0.,  0., 20./)
 
-doPeriodicCorrect  = T
+! Periodicity
+vv                 = (/20.,  0.,  0./)              ! Vector for periodic BC
+vv                 = (/ 0., 20.,  0./)              ! Vector for periodic BC
+vv                 = (/ 0.,  0., 20./)              ! Vector for periodic BC
+doPeriodicCorrect  = T                              ! Enables periodic correction to improve element alignment
