Check multiple options, elemType is now single option

--- a/tutorials/1-04-cartbox_multiple_stretch/parameter.ini
+++ b/tutorials/1-04-cartbox_multiple_stretch/parameter.ini
@@ -11,6 +11,7 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 !================================================================================================================================= !
 Mode         = 1                                    ! Mode for Cartesian boxes
 nZones       = 3                                    ! Number of boxes
+ElemType     = 108                                  ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
 
 ! ===   lower left zone  ===
 Corner       = (/-2.,-1.,0. ,,0.,-1.,0. ,,0.,0.,0. ,, -2.,0.,0.,,-2.,-1.,2. ,,0.,-1.,2. ,,0.,0.,2. ,, -2.,0.,2./)
@@ -19,20 +20,17 @@ nElems       = (/8,4,4/)                            ! Number of elements in each
 BCIndex      = (/6,1,3,0,4,7/)                      ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
 factor       = (/-1.2,1.,1./)                       ! Element stretching, either with a constant growth factor (+/- changes direction)
 ! l0          = (/0.,0.,0./)                         ! or with a minimimum size
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===   upper left zone  ===
 Corner       = (/-2.,0.,0. ,, 0.,0.,0. ,, 0.,1.,0. ,, -2.,1.,0.,, -2.,0.,2. ,, 0.,0.,2. ,, 0.,1.,2. ,, -2.,1.,2. /)
 nElems       = (/8,6,4/)
 BCIndex      = (/6,0,0,2,4,7/)
-elemtype     = 108
 factor       = (/-1.2,1.5,1./)                      ! Element stretching
 
 ! ===   upper right zone  ===
 Corner       = (/0.,0.,0. ,, 5.,0.,0. ,, 5.,1.,0. ,, 0.,1.,0.,, 0.,0.,2. ,, 5.,0.,2. ,, 5.,1.,2. ,, 0.,1.,2. /)
 nElems       = (/10,6,4/)
 BCIndex      = (/6,3,5,2,0,7/)
-elemtype     = 108
 factor       = (/1.,1.5,1./)                        ! Element stretching
 
 !================================================================================================================================= !
