--- a/tutorials/5-02-convtest_flipped/parameter.ini
+++ b/tutorials/5-02-convtest_flipped/parameter.ini
@@ -12,20 +12,19 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 Mode         = 1                                    ! Mode for Cartesian boxes
 nZones       = 2                                    ! Number of boxes
 doSortIJK    = T                                    ! Sort the mesh elements along the I,J,K directions
+ElemType     = 108                                  ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
 
 ! ===  left zone  ===
 Corner       = (/-1,-1,-1   ,,0,-1,-1   ,,0,1,-1    ,,-1,1,-1    ,,-1,-1,1   ,,0,-1,1   ,,0,1,1    ,,-1,1,1/)
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/4,8,8/)                            ! Number of elements in each direction
 BCIndex      = (/1,2,7,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! === right zone  ===
 ! FLIPS 1, 2, 3 between the periodic sides
 Corner       = (/0,-1,1     ,,1,-1,1    ,,1,1,1     ,,0,1,1      ,,0,-1,-1   ,,1,-1,-1  ,,1,1,-1   ,,0,1,-1/)
 nElems       = (/4,8,8/)                            ! Number of elements in each direction
 BCIndex      = (/6,2,3,4,7,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
