--- a/tutorials/5-03-convtest_mortar/parameter.ini
+++ b/tutorials/5-03-convtest_mortar/parameter.ini
@@ -12,6 +12,7 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 Mode         = 1                                    ! Mode for Cartesian boxes
 nZones       = 3                                    ! Number of boxes
 doSortIJK    = F                                    ! Sort the mesh elements along the I,J,K directions
+ElemType     = 108                                  ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
 
 ! ===         left zone ===
 Corner       = (/-1,-1,-1   ,,-0.5,-1,-1   ,,-0.5,1,-1    ,,-1,1,-1    ,,-1,-1,1   ,,-0.5,-1,1   ,,-0.5,1,1    ,,-1,1,1/)
@@ -19,21 +20,18 @@ Corner       = (/-1,-1,-1   ,,-0.5,-1,-1   ,,-0.5,1,-1    ,,-1,1,-1    ,,-1,-1,1
 nElems       = (/4,8,8/)                            ! Number of elements in each direction
 ! nElems       = (/2,4,4/)                            ! Number of elements in each direction
 BCIndex      = (/1,2,0,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===       middle zone ===
 Corner       = (/-0.5,-1,1     ,, 0.5,-1,1    ,, 0.5,1,1     ,,-0.5,1,1      ,,-0.5,-1,-1   ,, 0.5,-1,-1  ,, 0.5,1,-1   ,,-0.5,1,-1/)
 nElems       = (/8,8,4/)                           ! Number of elements in each direction
 ! nElems       = (/4,4,2/)                           ! Number of elements in each direction
 BCIndex      = (/6,2,0,4,0,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===        right zone ===
 Corner       = (/0.5,-1,-1  ,, 1,-1,-1   ,,1,1,-1    ,,0.5,1,-1    ,,0.5,-1,1   ,,1,-1,1   ,,1,1,1    ,,0.5,1,1/)
 nElems       = (/4,8,8/)                           ! Number of elements in each direction
 ! nElems       = (/2,4,4/)                           ! Number of elements in each direction
 BCIndex      = (/1,2,3,4,0,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
-ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
