--- a/tutorials/1-01-cartbox/parameter.ini
+++ b/tutorials/1-01-cartbox/parameter.ini
@@ -15,7 +15,7 @@ Corner       = (/0.,0.,0. ,,1.,0.,0. ,,1.,1.,0. ,,  0.,1.,0.,, 0.,0.,1. ,,1.,0.,
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/8,8,8/)                            ! Number of elements in each direction
 BCIndex      = (/1,2,3,4,5,6/)                      ! Indices of boundary conditions for six boundary faces (z-,y-,x+,y+,x-,z+)
-elemtype     = 108                                  ! Element type (108: Hexahedral)
+ElemType     = 108                                  ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
