add new tutorials and ANSA files for 3-01 and 3-02 (agglomeration and 1st/2nd order (curved) HEXAs)

--- a/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
+++ b/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
@@ -1,7 +1,7 @@
 !=============================================================================== !
 ! OUTPUT
 !=============================================================================== !
-ProjectName  = 3-01-agglomeration_CGNS_NACA         ! Name of output files
+ProjectName  = 3-02-sec_order_hex_CGNS_NACA         ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 ! nThreads     = 4                                    ! Number of threads for multiprocessing
@@ -9,18 +9,16 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 !=============================================================================== !
 ! MESH
 !=============================================================================== !
-FileName     = 3-01-agglomeration_CGNS_NACA.cgns    ! Name of mesh file
+FileName     = 3-02-sec_order_hex_CGNS_NACA.cgns    ! Name of mesh file
 Mode         = 3                                    ! 1 Cartesian 3 External
 ! MeshScale    = 0.001                                ! Scale all input meshes by factor
 
 !=============================================================================== !
 ! CURVING BY AGGLOMERATION
 !=============================================================================== !
-MeshIsAlreadyCurved = T                             ! Enable curving via agglomeration
-NGeo                = 4                             ! 2: agglomerate 2x2x2 linear elements to 1 curved element
+!MeshIsAlreadyCurved = T                             ! Enable curving via agglomeration
+NGeo                = 2                             ! 2: agglomerate 2x2x2 linear elements to 1 curved element
                                                     ! 4: agglomerate 4x4x4 linear elements to 1 curved element
-BoundaryOrder       = 5                             ! 3: agglomerate 2x2x2 linear elements to 1 curved element (legacy)
-                                                    ! 5: agglomerate 4x4x4 linear elements to 1 curved element (legacy)
 doPeriodicCorrect   = T                             ! Enable periodicity correction
 
 !=============================================================================== !
