--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,7 @@
 *.pvtu    filter=lfs diff=lfs merge=lfs -text
 *.docx    filter=lfs diff=lfs merge=lfs -text
 *.tar     filter=lfs diff=lfs merge=lfs -text
-*.tar.zst filter=lfs diff=lfs merge=lfs -text
+*.zst     filter=lfs diff=lfs merge=lfs -text
 *.vtu     filter=lfs diff=lfs merge=lfs -text
 *.whl     filter=lfs diff=lfs merge=lfs -text
 
