allow processing of curved unstructured HEXAs

--- a/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
+++ b/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
@@ -16,7 +16,7 @@ Mode         = 3                                    ! 1 Cartesian 3 External
 !=============================================================================== !
 ! CURVING BY AGGLOMERATION
 !=============================================================================== !
-!MeshIsAlreadyCurved = T                             ! Enable curving via agglomeration
+MeshIsAlreadyCurved = T                             ! Enable curving via agglomeration
 NGeo                = 2                             ! 2: agglomerate 2x2x2 linear elements to 1 curved element
                                                     ! 4: agglomerate 4x4x4 linear elements to 1 curved element
 doPeriodicCorrect   = T                             ! Enable periodicity correction
