Bring order to the chaos

--- a/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
+++ b/tutorials/3-02-sec_order_hex_CGNS_NACA/parameter.ini
@@ -12,6 +12,7 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 FileName     = 3-02-sec_order_hex_CGNS_NACA.cgns    ! Name of mesh file
 Mode         = 3                                    ! 1 Cartesian 3 External
 ! MeshScale    = 0.001                                ! Scale all input meshes by factor
+doMortars    = F                                    ! Enable mortars
 
 !=============================================================================== !
 ! CURVING BY AGGLOMERATION
