--- a/tutorials/3-03-sec_order_mixed_CGNS/parameter.ini
+++ b/tutorials/3-03-sec_order_mixed_CGNS/parameter.ini
@@ -17,7 +17,8 @@ Mode         = 3                                    ! 1 Cartesian 3 External
 !=============================================================================== !
 MeshIsAlreadyCurved = T                       ! Enable curving via agglomeration
 NGeo                = 2                       ! 2: use 2nd order curved element
-doPeriodicCorrect   = T                       ! Enable periodicity correction
+doPeriodicCorrect   = F                       ! Enable periodicity correction
+doMortars           = F                       ! Enable mortar connections
 
 !=============================================================================== !
 ! BOUNDARY CONDITIONS
