--- a/tutorials/2-13-external_mesh_HOPR_simplex/parameter.ini
+++ b/tutorials/2-13-external_mesh_HOPR_simplex/parameter.ini
@@ -1,7 +1,9 @@
 !=============================================================================== !
 ! OUTPUT
 !=============================================================================== !
-ProjectName  = 2-14-external_mesh_HOPR_tetra        ! Name of output files
+ProjectName  = 2-13-external_mesh_HOPR_tetra        ! Name of output files
+! ProjectName  = 2-13-external_mesh_HOPR_pyram        ! Name of output files
+! ProjectName  = 2-13-external_mesh_HOPR_prism        ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 ! nThreads     = 4                                    ! Number of threads for multiprocessing
@@ -9,7 +11,9 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 !=============================================================================== !
 ! MESH
 !=============================================================================== !
-FileName     = 2-14-external_mesh_HOPR_tetra.h5     ! Name of mesh file
+FileName     = 2-13-external_mesh_HOPR_tetra.h5     ! Name of mesh file
+! FileName     = 2-13-external_mesh_HOPR_pyram.h5     ! Name of mesh file
+! FileName     = 2-13-external_mesh_HOPR_prism.h5     ! Name of mesh file
 Mode         = 3                                    ! 1 Cartesian 3 External
 ! MeshScale    = 0.001                                ! Scale all input meshes by factor
 
