--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,25 +125,25 @@ ruff:
     - pyhope 2-02-external_mesh_CGNS_mixed/parameter.ini
 
 # Python 3.10 ----------------------------------------------------------------------------------------------------------------------------------------
-python_310:
+python:3.10:
   extends: .defaults
   stage: compatibility
   image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-python:3.10.16-bookworm-x86_64
   <<: *compatibility-script
 # Python 3.11 ----------------------------------------------------------------------------------------------------------------------------------------
-python_311:
+python:3.11:
   extends: .defaults
   stage: compatibility
   image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-python:3.11.11-bookworm-x86_64
   <<: *compatibility-script
 # Python 3.12 ----------------------------------------------------------------------------------------------------------------------------------------
-python_312:
+python:3.12:
   extends: .defaults
   stage: compatibility
   image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-python:3.12.9-bookworm-x86_64
   <<: *compatibility-script
 # Python 3.13 ----------------------------------------------------------------------------------------------------------------------------------------
-python_313:
+python:3.13:
   extends: .defaults
   stage: compatibility
   # image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-python:3.13.2-bookworm-x86_64 # default version at the moment
@@ -264,7 +264,7 @@ coverage:
 convergence:
   extends: .defaults
   stage: convergence
-  image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-fedora_41-x86_64
+  image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-fedora:41-x86_64
   artifacts:
     paths:
       - convergence_artifacts.log
