Perform connectMortar on unique nodes instead of coordinates     # from pyhope.mesh.connect.connect import flip_physical

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     'plotext',
     'scipy',
     'gmsh',
+    'sortedcontainers',
     'typing-extensions'
 ]
 keywords = ["PyHOPE", "mesh generator"]
