Implement analytic Gmsh -> Meshio mapping
Maximum NGeo=9 as this is where meshio stops. PyHOPE itself has no limit anymore!

--- a/tutorials/1-01-cartbox/parameter.ini
+++ b/tutorials/1-01-cartbox/parameter.ini
@@ -16,6 +16,7 @@ Corner       = (/0.,0.,0. ,,1.,0.,0. ,,1.,1.,0. ,,  0.,1.,0.,, 0.,0.,1. ,,1.,0.,
 nElems       = (/8,8,8/)                            ! Number of elements in each direction
 BCIndex      = (/1,2,3,4,5,6/)                      ! Indices of boundary conditions for six boundary faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
+nGeo         = 9
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
