--- a/tutorials/1-11-cartbox_mixed/parameter.ini
+++ b/tutorials/1-11-cartbox_mixed/parameter.ini
@@ -10,7 +10,7 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 ! MESH
 !================================================================================================================================= !
 Mode         = 1                          ! Mode for Cartesian boxes
-nZones       = 3                          ! number of boxes
+nZones       = 4                          ! number of boxes
 nGeo         = 4
 
 ! PRISM                                   > Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
@@ -25,8 +25,14 @@ elemtype     = 108                        ! Element type (108: hexa)
 nElems       = (/1,1,1/)                  ! Number of elements in each direction
 BCIndex      = (/1,0,3,0,5,6/)            ! Indices of Boundary Conditions
 
-! PRISM                                   > Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
+! PYRA                                    > Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 Corner       = (/-1., 1.,-1. ,, -1., 1., 0. ,, -1., 2.,  0. ,,  -1., 2.,-1.,,  0., 1.,-1. ,, 0., 1., 0. ,,0.,2.,0. ,,   0.,2.,-1. /)
+elemtype     = 105                        ! Element type (106: prism)
+nElems       = (/1,1,1/)                  ! Number of elements in each direction
+BCIndex      = (/1,0,3,0,5,6/)            ! Indices of Boundary Conditions
+
+! PRISM                                   > Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
+Corner       = (/-1., 2.,-1. ,, -1., 2., 0. ,, -1., 3.,  0. ,,  -1., 3.,-1.,,  0., 2.,-1. ,, 0., 2., 0. ,,0.,3.,0. ,,   0.,3.,-1. /)
 elemtype     = 106                        ! Element type (106: prism)
 nElems       = (/1,1,1/)                  ! Number of elements in each direction
 BCIndex      = (/1,0,3,4,5,6/)            ! Indices of Boundary Conditions
