Fix parameterfile parsing for block-wise element types

--- a/tutorials/9-01-parameterfile-parsing/parameter.ini
+++ b/tutorials/9-01-parameterfile-parsing/parameter.ini
@@ -48,19 +48,21 @@ Prefix Comment % ! nThreads     = 4                                  ! Number of
 !================================================================================================================================= !
 Mode         = sub                                                   ! Mode for Cartesian boxes
 nZones       = subString                                             ! Number of boxes
-ElemType     = p0
 
 Corner       = (/-p0_1,zeroR,-1.,,zeroR,zeroR,-1.,,zeroR,p0_1,-1.,,-p0_1,p0_1,-1.,,-p0_1,zeroR,zeroR,,zeroR,zeroR,zeroR,,zeroR,p0_1,zeroR,,-p0_1,p0_1,0/)
-nElems       = nElemsV1
-BCIndex      = (/1,6,3,7,4,zeroI/)
+nElems       = nElemsV1                                              ! Number of elements
+BCIndex      = (/1,6,3,7,4,zeroI/)                                   ! Boundary conditions
+ElemType     = p0                                                    ! Element type
 
 Corner       = (/-p0_1,zeroR,zeroR,,zeroR,zeroR,zeroR,,zeroR,p0_1,zeroR,,-p0_1,p0_1,zeroR,,-p0_1,zeroR,1.,,zeroR,zeroR,1.,,zeroR,p0_1,1.,,-p0_1,p0_1,1/)
-nElems       = nElemsV1
-BCIndex      = (/zeroI,6,zeroI,7,4,2/)
+nElems       = nElemsV1                                              ! Number of elements
+BCIndex      = (/zeroI,6,zeroI,7,4,2/)                               ! Boundary conditions
+ElemType     = p0                                                    ! Element type
 
 Corner       = (/zeroR,zeroR,zeroR,, 5.,zeroR,zeroR,, 5.,p0_1,zeroR,, zeroR,p0_1,zeroR,, zeroR,zeroR,1.,, 5.,zeroR,1.,, 5.,p0_1,1.,, zeroR,p0_1,1./)
-nElems       = (/10,4,2/)
-BCIndex      = (/3,6,5,7,zeroI,2/)
+nElems       = (/10,4,2/)                                            ! Number of elements
+BCIndex      = (/3,6,5,7,zeroI,2/)                                   ! Boundary conditions
+ElemType     = p0                                                    ! Element type
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
