--- a/tutorials/1-02-cartbox_periodic/parameter.ini
+++ b/tutorials/1-02-cartbox_periodic/parameter.ini
@@ -15,7 +15,8 @@ Corner       = (/0.,0.,0. ,,1.,0.,0. ,,1.,1.,0. ,,  0.,1.,0.,, 0.,0.,1. ,,1.,0.,
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/2,3,4/)                            ! Number of elements in each direction
 BCIndex      = (/1,3,6,4,5,2/)                      ! Indices of boundary conditions for six boundary faces (z-,y-,x+,y+,x-,z+)
-elemtype     = 108                                  ! Element type (108: Hexahedral)
+ElemType     = 108                                  ! Element type (108: Hexahedral)
+doFEMConnect = T                                    ! Generate finite element method (FEM) connectivity
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
