--- a/tutorials/2-08-external_mesh_Gambit_ASCII/parameter.ini
+++ b/tutorials/2-08-external_mesh_Gambit_ASCII/parameter.ini
@@ -1,7 +1,7 @@
 !=============================================================================== !
 ! OUTPUT
 !=============================================================================== !
-ProjectName  = 2-09-external_mesh_Gmsh_v4_3D_nonBC_surface
+ProjectName  = 2-08-external_mesh_Gambit_ASCII      ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 ! nThreads     = 4                                    ! Number of threads for multiprocessing
@@ -9,16 +9,24 @@ OutputFormat = HDF5                                 ! Mesh output format (HDF5 V
 !=============================================================================== !
 ! MESH
 !=============================================================================== !
-FileName     = 2-09-external_mesh_Gmsh_v4_3D_nonBC_surface.msh
+FileName     = 2-08-external_mesh_Gambit_ASCII.neu  ! Name of external mesh file
 Mode         = 3                                    ! 1 Cartesian 3 External
 MeshScale    = 0.001
 
 !=============================================================================== !
 ! BOUNDARY CONDITIONS
 !=============================================================================== !
-BoundaryName = BC_Inlet                             ! BC index 1 (from position in parameterfile)
+BoundaryName = BC_xplus                             ! BC index 1 (from position in parameterfile)
 BoundaryType = (/4,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_Outlet                            ! BC index 2
+BoundaryName = BC_xminus                            ! BC index 2
 BoundaryType = (/4,0,0,0/)
-BoundaryName = BC_Wall                              ! BC index 3
+BoundaryName = BC_yplus                             ! BC index 3
 BoundaryType = (/4,0,0,0/)
+BoundaryName = BC_yminus                            ! BC index 4
+BoundaryType = (/4,0,0,0/)
+BoundaryName = BC_zplus                             ! BC index 5
+BoundaryType = (/4,0,0,0/)
+BoundaryName = BC_zminus                            ! BC index 6
+BoundaryType = (/4,0,0,0/)
+BoundaryName = BC_inner                             ! BC index 7
+BoundaryType = (/100,0,0,0/)
