Manuscript for Journal of Open Source Software

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Python files
 __pycache__
 PKG-INFO
+venv/
 
 # Python stubs
 *.pyi
@@ -40,6 +41,7 @@ core
 *.old
 *.out
 *.txt
+paper.*
 
 # Other system specfic files
 .DS_Store
